# sejm-whiz

./: .cz.toml  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CACHE_PERFORMANCE_REPORT.md  CACHE_SYSTEM.md  CHANGELOG.md  CLAUDE.md  CLI_README.md  COMPLETED_TASKS.md  DATABASE_ARCHITECTURE.md  DEAD_CODE_ANALYSIS_REPORT.md  DEVELOPER_SETUP.md  DOCUMENT_FETCHING_ISSUE_ANALYSIS.md  Dockerfile.api  Dockerfile.processor  ELI_API_ANALYSIS_REPORT.md  ELI_API_Content_Availability_Analysis_Report.md  ELI_API_RETRY_STRATEGY.md  ELI_PDF_FALLBACK_IMPLEMENTATION_PLAN.md  ENHANCED_CONTENT_EXTRACTION_PLAN.md  IMPLEMENTATION_PLAN.md  K3S_DEPLOYMENT.md  LICENSE.md  P7CLI_SETUP.md  README.md  REFACTORING_REPORT.md  SECURITY_AUDITOR_README.md  alembic.ini  cli.py  config.sh  demo-report.md  demo_search.py  docker-compose.dev.yml  docker-compose.yml  document_fetching_flow_analysis.py  document_flow_diagram.py  document_flow_diagram_final.html  enhanced_data_processor.py  (+45 more)
.claude/agents/: security-bug-auditor.md
bases/sejm_whiz/data_pipeline/: __init__.py  core.py
bases/sejm_whiz/web_api/: __init__.py  core.py
bases/sejm_whiz/web_api/templates/: dashboard.html
cache/metadata/documents/te/: test_doc_123_metadata.json
cache/metadata/processing/te/: test_doc_123_processing.json
components/sejm_whiz/: __init__.py
components/sejm_whiz/cache/: __init__.py  config.py  document_cache.py  integration.py  management.py  manager.py  processed_text_cache.py
components/sejm_whiz/cli/: __init__.py  main.py
components/sejm_whiz/cli/commands/: config.py  database.py  dev.py  enhanced_retry_strategy.py  env.py  ingest.py  model.py  pipeline_bridge.py  search.py  system.py
components/sejm_whiz/database/: __init__.py  alembic.ini  config.py  connection.py  models.py  operations.py  operations_secure.py
components/sejm_whiz/database/alembic/: env.py
components/sejm_whiz/document_ingestion/: __init__.py  cached_ingestion_pipeline.py  config.py  content_extraction_orchestrator.py  content_retry_queue.py  dual_stream_pipeline.py  eli_client.py  eli_client.py.backup  ingestion_pipeline.py  multi_api_pipeline.py  text_processor.py
components/sejm_whiz/eli_api/: __init__.py  client.py  content_validator.py  enhanced_content_validator.py  models.py  parser.py  pdf_converter.py  utils.py
components/sejm_whiz/embeddings/: __init__.py  bag_embeddings.py  batch_processor.py  config.py  embedding_operations.py  herbert_embedder.py  herbert_encoder.py  similarity.py
components/sejm_whiz/legal_nlp/: __init__.py  core.py  relationship_extractor.py  semantic_analyzer.py
components/sejm_whiz/logging/: __init__.py  enhanced_logger.py
components/sejm_whiz/prediction_models/: __init__.py  classification.py  config.py  core.py  ensemble.py  similarity.py
components/sejm_whiz/redis/: __init__.py  cache.py  config.py  connection.py  queue.py
components/sejm_whiz/sejm_api/: __init__.py  client.py  exceptions.py  models.py  rate_limiter.py
components/sejm_whiz/semantic_search/: __init__.py  config.py  core.py  cross_register.py  indexer.py  query_processor.py  ranker.py  search_engine.py
components/sejm_whiz/text_processing/: __init__.py  cleaner.py  core.py  entities.py  legal_parser.py  normalizer.py  tokenizer.py
components/sejm_whiz/vector_db/: __init__.py  connection.py  embeddings.py  models.py  operations.py  utils.py
components/sejm_whiz/vector_db/migrations/: __init__.py
deployments/baremetal/: DEBIAN_HOST_SETUP.md  README.md
deployments/baremetal/config/: environment.env
deployments/baremetal/docs/: P7_POSTGRESQL_SETUP.md  P7_REDIS_SETUP.md  README.md
deployments/baremetal/scripts/: copy-to-p7.sh  deploy-all.sh  deploy-api-server.sh  deploy-data-processor.sh  deploy-web-ui.sh  install-system.sh  manage-services.sh
deployments/docker/: .env.dev.cpu  .env.dev.gpu  .env.example  README.md  dashboard_app.py  deploy-p7-simple.sh  deploy-p7.sh  docker-compose.ci.yml  docker-compose.dev-p7.yml  docker-compose.dev.yml  docker-compose.minimal-p7.yml  docker-compose.prod.yml  init-db.sql
deployments/k3s/: Dockerfile.web-ui-dev  K3S_DEPLOYMENT.md  README.md  WEB_UI_DEVELOPMENT_NOTES.md
deployments/k3s/manifests/: k3s-model-cache-pvc.yaml  k3s-monitoring.yaml  k3s-processor-deployment-cpu.yaml  k3s-processor-deployment-gpu.yaml  k3s-processor-job-gpu.yaml  k3s-web-ui-deployment-dev.yaml  k3s-web-ui-deployment.yaml
deployments/k3s/scripts/: gpu_validation.py  rebuild-processor.sh  run-migrations.sh  setup-gpu.sh  setup-production.sh  setup-web-ui-dev.sh  setup-web-ui.sh  sync-web-ui.sh
helm/charts/postgresql-pgvector/: Chart.yaml  values.yaml
helm/charts/postgresql-pgvector/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  pvc.yaml  secret.yaml  service.yaml
helm/charts/redis/: Chart.yaml  values.yaml
implementation-steps/: 001-Search-CLI-Integration.md  002-Sejm-API-Pipeline-Fix.md  003-Demo-Status-Messaging.md  Backend-CLI-Integration-#001.md  complete-pipeline-bridge-Working-demo-Basic-documentation-#003.md  create-pipeline-bridge-#002.md  enhanced-logging-with-source-location-#003.md  pipeline-bridge-implementation-plan-#003.md
performance/: README.md
performance/benchmarks/: benchmark_embeddings.py  benchmark_full_pipeline.py  benchmark_pipeline_simple.py
performance/reports/: EMBEDDING_PERFORMANCE_BENCHMARK.md
performance/results/: full_pipeline_benchmark_1754410531.json  full_pipeline_benchmark_results_1754410425.json
projects/api_server/: Dockerfile  README.md  main.py  pyproject.toml
projects/data_processor/: Dockerfile  Dockerfile.cpu  README.md  main.py  models.py  pyproject.toml
projects/web_ui/: Dockerfile  README.md  main.py  pyproject.toml
scripts/: README.md  cleanup-p7-database.sh  install-completion.sh  setup-p7-database.sh  version-test.sh
task_agents/: __init__.py  python_security_auditor_agent.py
test/: test_full_integration.py
test/components/sejm_whiz/: test_multi_api_integration.py
test_output/: execute_refactoring.sh  refactoring_plan.json  rollback_refactoring.sh  track_progress.py  validate_refactoring.sh
(+49 files in other folders)
