[project]
name = "sejm-whiz"
dynamic = ["version"]
description = "Process data exposed by the Sejm (Polish parliament) API then..."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.12.15",
    "alembic>=1.16.4",
    "beautifulsoup4>=4.13.4",
    "fastapi>=0.116.1",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "lightgbm>=4.6.0",
    "nltk>=3.9.1",
    "numpy>=2.3.2",
    "optuna>=4.4.0",
    "pgvector>=0.4.1",
    "pl-core-news-sm",
    "protobuf>=6.31.1",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "python-multipart>=0.0.20",
    "redis>=6.2.0",
    "regex>=2024.11.6",
    "requests>=2.32.4",
    "sacremoses>=0.1.1",
    "scikit-learn>=1.7.1",
    "sentence-transformers>=5.0.0",
    "slowapi>=0.1.9",
    "spacy==3.7.5",
    "sqlalchemy>=2.0.41",
    "tokenizers>=0.21.4",
    "torch>=2.7.1",
    "transformers>=4.54.0",
    "uvicorn>=0.35.0",
    "xgboost>=3.0.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mdformat>=0.7.22",
    "mdformat-gfm>=0.4.1",
    "polylith-cli>=1.30.1",
    "pre-commit>=4.2.0",
    "pytest-asyncio>=1.1.0",
    "pytest-postgresql>=7.0.2",
]

[tool.hatch.build]
dev-mode-dirs = ["components", "bases", "development", "."]

[tool.polylith.bricks]
"components/sejm_whiz/sejm_api" = "sejm_whiz/sejm_api"
"components/sejm_whiz/redis" = "sejm_whiz/redis"
"components/sejm_whiz/document_ingestion" = "sejm_whiz/document_ingestion"
"components/sejm_whiz/eli_api" = "sejm_whiz/eli_api"
"components/sejm_whiz/database" = "sejm_whiz/database"
"components/sejm_whiz/vector_db" = "sejm_whiz/vector_db"
"components/sejm_whiz/embeddings" = "sejm_whiz/embeddings"
"components/sejm_whiz/text_processing" = "sejm_whiz/text_processing"
"components/sejm_whiz/legal_nlp" = "sejm_whiz/legal_nlp"
"components/sejm_whiz/prediction_models" = "sejm_whiz/prediction_models"
"bases/sejm_whiz/web_api" = "sejm_whiz/web_api"
"components/sejm_whiz/semantic_search" = "sejm_whiz/semantic_search"
"bases/sejm_whiz/data_pipeline" = "sejm_whiz/data_pipeline"

[tool.uv.sources]
pl-core-news-sm = { url = "https://github.com/explosion/spacy-models/releases/download/pl_core_news_sm-3.7.0/pl_core_news_sm-3.7.0-py3-none-any.whl" }

[tool.hatch.version]
path = "components/sejm_whiz/__init__.py"
