[build-system]
requires = ["hatchling", "hatch-polylith-bricks"]
build-backend = "hatchling.build"

[project]
name = "api_server"
version = "0.1.0"



requires-python = ">=3.12"

dependencies = [
    "fastapi>=0.116.1",
    "uvicorn>=0.35.0",
    "pydantic>=2.11.7",
    "jinja2>=3.1.0",
    "pydantic-settings>=2.0.0",
]

[tool.hatch.build.hooks.polylith-bricks]

[tool.hatch.build.targets.wheel]
packages = ["main.py"]

[tool.polylith.bricks]
bases = ["web_api"]
components = [
    "semantic_search",
    "prediction_models",
    "embeddings",
    "vector_db",
    "database",
    "text_processing"
]
