[build-system]
requires = ["hatchling", "hatch-polylith-bricks"]
build-backend = "hatchling.build"

[project]
name = "web_ui"
version = "0.1.0"
description = "Web UI server for Sejm Whiz monitoring dashboard"

requires-python = ">=3.12"

dependencies = [
    "fastapi>=0.116.1",
    "uvicorn>=0.32.1",
    "jinja2>=3.1.6",
    "pydantic>=2.10.5",
    "httpx>=0.28.1",
]

[tool.hatch.build.hooks.polylith-bricks]

[tool.polylith.bricks]
bases = ["web_api"]
components = []
